dark mode fixed ??

--- a/style/style.css
+++ b/style/style.css
@@ -146,8 +146,18 @@ header {
   -webkit-backdrop-filter: blur(50px) saturate(125%);
   box-shadow: 0 8px 32px 0 rgba(135, 36, 31, 0.1);
 
+  button {
+    background-color: transparent;
+    border: none;
+    transition: scale 0.25s ease-in-out;
+  }
+
+  button:active {
+    scale: 0.8;
+  }
+
   img {
-    transition: rotate 0.5s cubic-bezier(0.52, -0.11, 0.49, 1.26);
+    transition: rotate 0.5s ease-in-out;
   }
 }
 
@@ -223,10 +233,6 @@ main p {
   color: var(--primary-white);
   --conf-primary-two: #0d9de0;
   background-color: var(--conf-primary-two);
-}
-
-.tab-conf-passive {
-  background-color: var(--conf-primary-one);
 }
 
 .tab-conf:hover,
@@ -325,6 +331,18 @@ main p {
   height: fit-content;
   width: 100%;
   padding: var(--spacing-regular) var(--spacing-big);
+  animation: slide-left 0.4s ease-in-out;
+}
+
+@keyframes slide-left {
+  from {
+    opacity: 0;
+    transform: translateX(-50%);
+  }
+  to {
+    opacity: 100;
+    transform: translateX(0%);
+  }
 }
 
 .jira-carousel,
@@ -419,19 +437,16 @@ main p {
   justify-items: space-evenly;
   align-content: center;
 
-  .conf-prev-btn,
-  .conf-next-btn {
-    color: var(--conf-primary-one);
+  .carousel-btn {
     background-color: transparent;
     font-size: 2.5rem;
     transition: scale 0.25s ease-in-out;
-    margin: 0;
+    margin: var(--spacing-regular);
     border: none;
   }
 
   .carousel-btn:hover {
     color: var(--grey-four);
-    scale: 1.15;
   }
 
   .carousel-btn:active {
@@ -450,7 +465,7 @@ main p {
     background-color: transparent;
     font-size: 2.5rem;
     transition: scale 0.25s ease-in-out;
-    margin: 0;
+    margin: var(--spacing-regular);
     border: none;
   }
 
@@ -494,15 +509,12 @@ button:focus-visible {
 /* *Footer */
 
 footer {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
   background-color: var(--primary-black);
-  display: grid;
   color: var(--primary-white);
   min-height: 50vh;
   height: fit-content;
   width: 100%;
+  padding-top: var(--spacing-big);
 
   h4 {
     padding-top: var(--spacing-regular);
@@ -513,6 +525,17 @@ footer {
     padding-bottom: var(--spacing-half);
     list-style: none;
     max-width: 25ch;
+  }
+
+  img {
+    display: none;
+    height: 100%;
+    max-width: 100%;
+    aspect-ratio: 6 / 4;
+  }
+
+  .footer-wrapper {
+    margin: 0 auto;
   }
 }
 
@@ -525,28 +548,38 @@ footer {
 
   .footer-wrapper {
     display: grid;
-    grid-template-areas:
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    /* grid-template-areas:
       "one one"
       "two three"
-      "four four";
+      "four four"; */
   }
 
   .footer-list-one {
-    grid-area: one;
+    grid-column: 1/3;
+    grid-row: 1/2;
     justify-self: start;
   }
 
   .footer-list-two {
-    grid-area: two;
+    grid-column: 2/3;
+    grid-row: 2/3;
   }
 
   .footer-list-three {
-    grid-area: three;
+    grid-column: 1/2;
+    grid-row: 2/3;
   }
 
   footer img {
-    grid-area: four;
-    width: 100%;
+    grid-column: 1/3;
+    grid-row: 1/3;
+    display: block;
+    max-width: 100%;
+    align-self: center;
+    justify-self: center;
+    mix-blend-mode: overlay;
   }
 }
 
@@ -584,24 +617,26 @@ footer {
 
   .footer-wrapper {
     display: grid;
-    grid-template-areas:
-      "one two three"
-      "four";
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     width: 100%;
   }
 
   .footer-list-one {
-    grid-area: one;
+    grid-column: 1/4;
+    grid-row: 1/2;
     justify-self: center;
   }
 
   .footer-list-two {
-    grid-area: two;
+    grid-column: 1/3;
+    grid-row: 2/5;
     justify-self: center;
   }
 
   .footer-list-three {
-    grid-area: three;
+    grid-column: 2/4;
+    grid-row: 2/4;
     justify-self: center;
   }
 
@@ -612,8 +647,11 @@ footer {
     margin: auto 0;
   }
 
-  img {
-    grid-area: four;
+  footer img {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    align-self: center;
+    justify-self: center;
   }
 }
 
@@ -720,5 +758,59 @@ footer {
       flex-direction: row;
       justify-content: space-evenly;
     }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--grey-six);
+    --primary-white: #f8f7f4;
+    color: var(--primary-white);
+  }
+
+  .header-wrapper {
+    background-image: url(../assets/svg/Caelor-Black-02-16x9.svg);
+  }
+
+  main {
+    background-color: var(--grey-six);
+    --primary-white: #f8f7f4;
+    color: var(--primary-white);
+  }
+
+  .app-tabs button {
+    --primary-white: #f8f7f4;
+    color: var(--primary-white);
+    background-color: var(--grey-four);
+  }
+
+  .app-tabs button:hover {
+    background-color: var(--grey-five);
+  }
+
+  .app-tabs .passive-tab {
+    background-color: var(--grey-six);
+    --primary-white: #f8f7f4;
+    color: var(--primary-white);
+  }
+
+  .app-wrapper {
+    a {
+      color: var(--conf-primary-two);
+    }
+  }
+
+  .conf-carousel-container,
+  .jira-carousel-container,
+  .app-card {
+    border: 1px solid var(--grey-four);
+  }
+
+  .carousel-btn {
+    color: var(--grey-two);
+  }
+
+  .carousel-btn:hover {
+    color: var(--grey-one);
   }
 }
